<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/help_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/halloween"
    tools:context=".HelpActivity">

    <RelativeLayout
        android:id="@+id/help_relative_layout"
        android:layout_width="729dp"
        android:layout_height="409dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/app_title"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="237dp"
            android:layout_marginTop="53dp"
            android:layout_marginEnd="252dp"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="36sp"
            android:textStyle="bold" />

        <ScrollView
            android:id="@+id/help_scrollview"
            android:layout_width="485dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_title"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="129dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="115dp"
            android:layout_marginBottom="3dp">

            <LinearLayout
                android:id="@+id/help_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/display_about_the_author_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/help_authors_title"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/link_textview"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/help_course_link"
                    android:textAlignment="center"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/about_author_content_textview"
                    android:layout_width="match_parent"
                    android:layout_height="103dp"
                    android:text="@string/help_about_author_text"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/how_to_play_game_textview"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:gravity="center"
                    android:text="@string/help_how_to_play_title"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/game_content_textView"
                    android:layout_width="match_parent"
                    android:layout_height="202dp"
                    android:text="@string/help_rules"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/citations_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:text="@string/help_citations_title" />

                <TextView
                    android:id="@+id/citations_content_textView_1"
                    android:textColor="#ffffff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:text="@string/help_citations_content_1" />

                <TextView
                    android:id="@+id/citations_content_textView_2"
                    android:textColor="#ffffff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:text="@string/help_citations_content_2" />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>